# cinematic-map

./: .gitignore  Cargo.toml  DESIGN.md  README.md  a.mov  build-encoder.sh  error.md  package.json  pnpm-lock.yaml  render.sh
.cargo/: config.toml
apps/desktop/: index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: map-capture
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/assets/: default.json
apps/desktop/src/components/: AnnotationLayer.tsx  AnnotationPanel.tsx  CameraPanel.tsx  KeyframePanel.tsx  MapView.tsx  RenderPanel.tsx  Timeline.tsx  TopBar.tsx
apps/desktop/src/components/render/: RenderOptions.tsx  RenderStatusView.tsx
apps/desktop/src/hooks/: useRenderVideo.ts  useTauri.ts
apps/desktop/src/store/: useMapStore.ts
apps/desktop/src/types/: index.ts
